[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }
http = "0.2"
httparse = "1.8"
